--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Peter Ezekiel
 description: A showcase of my data analytics projects
+logo: WhatsApp Image 2024-11-29 at 19.00.25_d4ee16cf.jpg
 theme: jekyll-theme-minimal
