--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Peter Ezekiel
 description: A showcase of my data analytics projects
-logo: WhatsApp Image 2024-11-29 at 19.00.25_d4ee16cf.jpg
+logo: "C:\Users\USER PC\Pictures\pm_1724395936721_cmp.jpg"
 theme: jekyll-theme-minimal
