--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Peter Ezekiel
 description: A showcase of my data analytics projects
-logo: "C:\Users\USER PC\Pictures\pm_1724395936721_cmp.jpg"
+logo: pm_1724395936721_cmp.jpg
 theme: jekyll-theme-minimal
